<resources>
    <string name="app_name">STRIDOR</string>
    <string name="title_activity_main">USERS</string>
    <string name="title_activity_video_capture">USER DATA</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="shr_hint_username">Name*</string>
    <string name="shr_hint_mobile">Mobile</string>
    <string name="shr_hint_gender">Gender *</string>
    <string name="shr_hint_dob">DOB*</string>
    <string name="shr_hint_height">Height*</string>
    <string name="shr_hint_weight">Weight*</string>
    <string name="shr_hint_illness">Any illnesses</string>
    <string name="shr_hint_task">Activity</string>
    <string name="shr_hint_media">Media</string>

    <string name="add_user">Add User</string>
    <string name="shr_button_next">Proceed</string>
    <string name="shr_button_cancel">cancel</string>
    <string name="add_user_desc">No users to display</string>
    <string name="add_rec_desc">No recordings</string>
    <string name="add_recording">Record</string>
    <string name="delete_user">Delete User</string>
    <string name="title_activity_record_audio">Capture Audio</string>
    <string name="shr_hint_rec_name"> Recording ID</string>
    <string name="title_activity_settings">Settings</string>

</resources>