<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/popup_backg"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:text="@string/add_user"
        android:textSize="26sp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/shr_hint_username"
            android:layout_weight="1"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/gender_dropdown"
            android:layout_width="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="50dp"
            android:drawSelectorOnTop="true"
            android:prompt="@string/shr_hint_gender"
            android:layout_weight="1.2"
            android:entries="@array/genderDropdown"
            android:spinnerMode="dialog"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobile_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/shr_hint_mobile"
        app:startIconDrawable="@drawable/ic_baseline_contact_phone_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dob"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:clickable="true"
            android:focusable="false"
            android:inputType="date"
            android:hint="@string/shr_hint_dob"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/height_text_input"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/shr_hint_height"
            app:suffixText="cm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/height_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weight_text_input"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/shr_hint_weight"
            app:suffixText="Kg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weight_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/illness_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/shr_hint_illness">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/illness_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="* Required"
        android:textSize="14sp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/Red"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/shr_button_next"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:background="@drawable/ripple_effect"/>

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_toStartOf="@+id/next_button"
        android:layout_toLeftOf="@+id/next_button"
        android:text="@string/shr_button_cancel"
        android:textSize="14sp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:clickable="true"/>

    </RelativeLayout>

</LinearLayout>